// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test empty seed 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#2AB2E2",
        "fontFamily": "Roboto-Regular",
        "fontSize": 25,
        "marginTop": 80,
      }
    }
  >
    import_seed.title
  </Text>
  <Text
    style={
      Object {
        "color": "#888888",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 40,
        "textAlign": "center",
        "width": "90%",
      }
    }
  >
    import_seed.description
  </Text>
  <TextInput
    autoCorrect={false}
    multiline={true}
    onChangeText={[Function]}
    style={
      Object {
        "borderColor": "#888888",
        "borderRadius": 10,
        "borderWidth": 0.5,
        "color": "black",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "height": 150,
        "marginTop": 30,
        "padding": 20,
        "textAlignVertical": "top",
        "width": "90%",
      }
    }
  />
</View>
`;

exports[`Test invalid seed 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#2AB2E2",
        "fontFamily": "Roboto-Regular",
        "fontSize": 25,
        "marginTop": 80,
      }
    }
  >
    import_seed.title
  </Text>
  <Text
    style={
      Object {
        "color": "#888888",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 40,
        "textAlign": "center",
        "width": "90%",
      }
    }
  >
    import_seed.description
  </Text>
  <TextInput
    autoCorrect={false}
    multiline={true}
    onChangeText={[Function]}
    style={
      Object {
        "borderColor": "#888888",
        "borderRadius": 10,
        "borderWidth": 0.5,
        "color": "black",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "height": 150,
        "marginTop": 30,
        "padding": 20,
        "textAlignVertical": "top",
        "width": "90%",
      }
    }
  />
  <Text
    style={
      Object {
        "color": "red",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 15,
      }
    }
  >
    import_seed.invalid_secret_phrase_err
  </Text>
</View>
`;

exports[`Test loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#2AB2E2",
        "fontFamily": "Roboto-Regular",
        "fontSize": 25,
        "marginTop": 80,
      }
    }
  >
    import_seed.title
  </Text>
  <Text
    style={
      Object {
        "color": "#888888",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 40,
        "textAlign": "center",
        "width": "90%",
      }
    }
  >
    import_seed.description
  </Text>
  <TextInput
    autoCorrect={false}
    multiline={true}
    onChangeText={[Function]}
    style={
      Object {
        "borderColor": "#888888",
        "borderRadius": 10,
        "borderWidth": 0.5,
        "color": "black",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "height": 150,
        "marginTop": 30,
        "padding": 20,
        "textAlignVertical": "top",
        "width": "90%",
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 40,
        "position": "absolute",
        "width": "80%",
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2AB2E2",
          "borderRadius": 10,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        next_btn_title
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test valid seed 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#2AB2E2",
        "fontFamily": "Roboto-Regular",
        "fontSize": 25,
        "marginTop": 80,
      }
    }
  >
    import_seed.title
  </Text>
  <Text
    style={
      Object {
        "color": "#888888",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 40,
        "textAlign": "center",
        "width": "90%",
      }
    }
  >
    import_seed.description
  </Text>
  <TextInput
    autoCorrect={false}
    multiline={true}
    onChangeText={[Function]}
    style={
      Object {
        "borderColor": "#888888",
        "borderRadius": 10,
        "borderWidth": 0.5,
        "color": "black",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "height": 150,
        "marginTop": 30,
        "padding": 20,
        "textAlignVertical": "top",
        "width": "90%",
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 40,
        "position": "absolute",
        "width": "80%",
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2AB2E2",
          "borderRadius": 10,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        next_btn_title
      </Text>
    </View>
  </View>
</View>
`;
